# tree-derivations

./: .gitignore  README.md  handout.txt  index.html  tree-derivations.cabal
plugin/highlight/: highlight.js
src/: Deep3D.hs  InfiniteTree.hs  LSystem0.hs  LSystem1.hs  LSystem2.hs  LSystem3.hs  LSystem4.hs  LSystem5.hs  StickFigure0.hs  StickFigure1.hs  StickFigure2.hs  StickFigure3.hs  Tapered0.hs  Tapered1.hs  TreeNodeDiagram.hs
